schema/testdata/validation_actions_update_invalid_where_operator/schema.keel
model Person {
    fields {
        name Text
        niNumber Number @unique
    }
    operations {
        update updateName() with (name) {
            @where(person.niNumber > 100)
        }
    }
}